data/derived/comb/progs/unify/prog3431.ml.out
Characters 80-81:
  | Sine s -> Format.sprintf "%d" (sin (3 * e));;
                                            ^
Error: This expression has type expr but an expression was expected of type
         int
